Change Get This Title to Get This Book

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -54,7 +54,7 @@
             </section>
             <section class="floating-menu {model.bottom}">
                 <div class="box">
-                <h2>Get this title</h2>
+                <h2>Get this book</h2>
                 <div class="get-this-book" skip="true"></div>
                 <div class="notes"></div>
                 <div class="cta">
