ISBN labels should not wrap on Calculus books

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -531,6 +531,7 @@
         th {
             text-align: left;
             vertical-align: top;
+            white-space: nowrap;
         }
 
         .license {
