Align fields on comp-copy form

--- a/src/app/pages/comp-copy/comp-copy.scss
+++ b/src/app/pages/comp-copy/comp-copy.scss
@@ -18,4 +18,8 @@
             margin-top: 12rem;
         }
     }
+
+    .labeled-inputs.row.book-info {
+        align-items: flex-start;
+    }
 }
