Story cards misaligned on blog
Stretch cards. Also set min-height so they will (generally) have their
bottom text lined up.

--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -82,6 +82,8 @@
         .content {
             display: flex;
             flex-direction: column;
+            justify-content: space-between;
+            min-height: 30rem;
         }
 
         .viewport {
