Left-align copy on adoption confirmation

--- a/src/app/pages/confirmation/confirmation.scss
+++ b/src/app/pages/confirmation/confirmation.scss
@@ -70,6 +70,10 @@ $page-background: #fbfbfb;
 
             &.left-aligned {
                 text-align: left;
+
+                > * {
+                    margin-left: 0;
+                }
             }
         }
 
