Left-align errata hero text

--- a/src/app/pages/errata/errata.scss
+++ b/src/app/pages/errata/errata.scss
@@ -35,6 +35,10 @@ $bar-size: 0.2rem;
             margin-bottom: 2rem;
         }
 
+        > .text-area {
+            text-align: left;
+        }
+
         h1 {
             color: color(blue);
             font-size: 4.8rem;
