Left-align popup text (return header text to center) on errata-book page

--- a/src/styles/components/tooltip.scss
+++ b/src/styles/components/tooltip.scss
@@ -8,6 +8,7 @@
         opacity: 0;
         overflow: hidden;
         position: absolute;
+        text-align: left;
     }
 
     &:hover .tooltip {
