Add alt text from CMS to images
And blank alt text where the image is redundant

--- a/src/app/components/calculator/calculator.html
+++ b/src/app/components/calculator/calculator.html
@@ -13,9 +13,9 @@
             </div>
             <div class="active-indicator">
                 <if condition="model.isValid.dollars">
-                    <img src="/images/components/green-checked-radio.svg" />
+                    <img src="/images/components/green-checked-radio.svg" alt="">
                 <else>
-                    <img src="/images/components/unchecked-radio.svg" />
+                    <img src="/images/components/unchecked-radio.svg" alt="">
                 </if>
             </div>
         </div>
@@ -28,9 +28,9 @@
             </div>
             <div class="active-indicator">
                 <if condition="model.isValid.students">
-                    <img src="/images/components/green-checked-radio.svg" />
+                    <img src="/images/components/green-checked-radio.svg" alt="">
                 <else>
-                    <img src="/images/components/unchecked-radio.svg" />
+                    <img src="/images/components/unchecked-radio.svg" alt="">
                 </if>
             </div>
         </div>
