--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -34,11 +34,11 @@
                     {model.amazon.price} from seller \"OpenStax\" on Amazon
                 </p>
                 <div if="!model.bookstore.link && model.bookstore.comingSoon" class="coming-soon-wrapper">
-                    <img class="coming-soon" src="/images/subjects/coming-soon.svg" />
+                    <img class="coming-soon" src="/images/subjects/coming-soon.svg" alt="coming soon">
                     BOOKSTORE ORDERS
                 </div>
                 <div if="!model.amazon.link && model.amazon.comingSoon" class="coming-soon-wrapper">
-                    <img class="coming-soon" src="/images/subjects/coming-soon.svg" />
+                    <img class="coming-soon" src="/images/subjects/coming-soon.svg" alt="coming soon">
                     INDIVIDUAL ORDERS
                 </div>
                 <div class="remover" aria-role="button"
