--- a/src/app/components/quotes/quote/quote.html
+++ b/src/app/components/quotes/quote/quote.html
@@ -8,7 +8,7 @@
             <quote-html data-html="content" skip="true"></quote-html>
             <div if="model.attribution" class="attribution">— {model.attribution}</div>
         </blockquote>
-        <img if="model.overlay" class="overlay" src="{model.overlay}">
+        <img if="model.overlay" class="overlay" src="{model.overlay}" alt="{model.alt_text}">
         <a if="model.cta" class="btn btn-orange" href="{model.link}">{model.cta}</a>
     </div>
 </template>
