--- a/src/app/components/share/share.html
+++ b/src/app/components/share/share.html
@@ -15,7 +15,7 @@
         </a>
         <a class="linkedin btn"
          href="https://www.linkedin.com/shareArticle?url={model.pageUrl}&mini=true&source=OpenStax&title={model.message}">
-            <i class="social-icon fa fa-linkedin-square" src=""></i>
+            <i class="social-icon fa fa-linkedin-square"></i>
             LinkedIn
         </a>
     </div>
