--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -26,7 +26,7 @@
                 <a if="model.subjectLinkText"
                     href="/subjects" title="{model.subjectLinkText}" class="go-back">{model.subjectLinkText}</a>
             </div>
-            <img if="model.studentImage" src="{`/images/components/${model.studentImage}`}" />
+            <img if="model.studentImage" src="{`/images/components/${model.studentImage}`}" alt=""/>
         </div>
     </div>
     <div if="model.belowHeader" class="wrapper">
