--- a/src/app/pages/details/partner/partner.html
+++ b/src/app/pages/details/partner/partner.html
@@ -2,7 +2,7 @@
     <div class="text">
         <if condition="model.logoUrl">
             <div class="logo">
-                <img src="{model.logoUrl}" />
+                <img src="{model.logoUrl}" alt="">
             </div>
         </if>
         <h4>{model.name}</h4>
