--- a/src/app/pages/foundation/foundation.html
+++ b/src/app/pages/foundation/foundation.html
@@ -11,7 +11,7 @@
         <div class="boxed">
             <div class="funder" each="funder in model.funders">
                 <div class="logo">
-                  <img src="{funder.funder_logo}">
+                  <img src="{funder.funder_logo}" alt="">
                 </div>
                 <div class="text">
                     <h2>{funder.title}</h2>
