--- a/src/app/pages/partners/partners.html
+++ b/src/app/pages/partners/partners.html
@@ -4,7 +4,10 @@
             <h1>{model.title}</h1>
             <p>{model.page_description}</p>
             <p class="logo-text">OpenStax Partners are identified around the web with the OpenStax Ally logo.</p>
-            <img if="model.allyLogoColor" class="ally-logo" src="http://staxlogos.openstax.org/OSX-ALLY-{model.allyLogoColor}-RGB-150dpi.png" />
+            <img if="model.allyLogoColor" class="ally-logo"
+             src="http://staxlogos.openstax.org/OSX-ALLY-{model.allyLogoColor}-RGB-150dpi.png"
+             alt="OpenStax Ally logo"
+             >
         </div>
     </div>
     <div class="strips-and-filter">
