--- a/src/app/components/body-units/aligned-image.html
+++ b/src/app/components/body-units/aligned-image.html
@@ -1,6 +1,6 @@
 <template args="model">
     <figure>
-        <img class="align-{model.alignment}" src="{model.imageUrl}" />
+        <img class="align-{model.alignment}" src="{model.imageUrl}" alt="">
         <figcaption data-html="caption"></figcaption>
     </figure>
 </template>
