--- a/src/app/pages/partners/partner-viewer/icons.html
+++ b/src/app/pages/partners/partner-viewer/icons.html
@@ -2,7 +2,7 @@
     <div each="partner in model.partners" class="logo">
         <a class="logo-text" href="#{partner.title}-blurb">
             <if condition="partner.ally_bw_logo">
-                <img src="{partner.ally_bw_logo}">
+                <img src="{partner.ally_bw_logo}" alt="{partner.title}">
             <else>
                 {partner.title}
             </if>
