Make menubars work with screenreader
Submenu items must get focus for the screenreader to announce them.
Handle aria-expanded properly.
Dropdown identification is strongly dependent on structure.

--- a/src/app/components/shell/header/main-menu/main-menu.scss
+++ b/src/app/components/shell/header/main-menu/main-menu.scss
@@ -108,7 +108,7 @@
                 }
             }
 
-            :focus ~ .dropdown-menu,
+            .dropdown-menu[aria-expanded="true"],
             &:hover .dropdown-menu {
                 border-top: 0.5rem solid color(orange);
                 display: block;
@@ -151,7 +151,7 @@
             }
 
             // scss-lint:disable SelectorDepth
-            .active > a,
+            a:focus,
             a:hover {
                 color: color(cyan);
             }
