--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -16,13 +16,13 @@
                 Subjects
                 <svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg>
             </a>
-            <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="Subjects menu">
-                <li role="presentation" class="{model.activeState(0)}"><a href="/subjects" role="menuitem" tabindex="-1">All</a></li>
-                <li role="presentation" class="{model.activeState(1)}"><a href="/subjects/math" role="menuitem" tabindex="-1">Math</a></li>
-                <li role="presentation" class="{model.activeState(2)}"><a href="/subjects/science" role="menuitem" tabindex="-1">Science</a></li>
-                <li role="presentation" class="{model.activeState(3)}"><a href="/subjects/social-sciences" role="menuitem" tabindex="-1">Social Sciences</a></li>
-                <li role="presentation" class="{model.activeState(4)}"><a href="/subjects/humanities" role="menuitem" tabindex="-1">Humanities</a></li>
-                <li role="presentation" class="{model.activeState(5)}"><a href="/subjects/ap" role="menuitem" tabindex="-1">AP<sup>®</sup></a></li>
+            <ul class="dropdown-menu" role="menu" aria-expanded="{model.openDropdown === 'subjects'}" aria-label="Subjects menu">
+                <li role="presentation"><a href="/subjects" role="menuitem" tabindex="-1">All</a></li>
+                <li role="presentation"><a href="/subjects/math" role="menuitem" tabindex="-1">Math</a></li>
+                <li role="presentation"><a href="/subjects/science" role="menuitem" tabindex="-1">Science</a></li>
+                <li role="presentation"><a href="/subjects/social-sciences" role="menuitem" tabindex="-1">Social Sciences</a></li>
+                <li role="presentation"><a href="/subjects/humanities" role="menuitem" tabindex="-1">Humanities</a></li>
+                <li role="presentation"><a href="/subjects/ap" role="menuitem" tabindex="-1">AP<sup>®</sup></a></li>
             </ul>
         </li>
         <li class="nav-menu-item" role="presentation">
@@ -30,10 +30,10 @@
         </li>
         <li class="nav-menu-item dropdown" role="presentation">
             <a href="/impact" role="menuitem" aria-haspopup="true">Our Impact<svg class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
-            <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="Our Impact menu">
-                <li role="presentation" class="{model.activeState(0)}"><a href="/impact" role="menuitem" tabindex="-1">Explore Our Impact</a></li>
-                <li role="presentation" class="{model.activeState(1)}"><a href="/partners" role="menuitem" tabindex="-1">Partners</a></li>
-                <li role="presentation" class="{model.activeState(2)}"><a href="/foundation" role="menuitem" tabindex="-1">Foundation Support</a></li>
+            <ul class="dropdown-menu" role="menu" aria-expanded="{model.openDropdown === 'impact'}" aria-label="Our Impact menu">
+                <li role="presentation"><a href="/impact" role="menuitem" tabindex="-1">Explore Our Impact</a></li>
+                <li role="presentation"><a href="/partners" role="menuitem" tabindex="-1">Partners</a></li>
+                <li role="presentation"><a href="/foundation" role="menuitem" tabindex="-1">Foundation Support</a></li>
             </ul>
         </li>
         <li class="nav-menu-item login{model.user.username ? ' dropdown' : ''}">
@@ -46,7 +46,7 @@
                 </a>
             </if>
 
-            <ul if="model.user.username" class="dropdown-menu" role="menu" aria-expanded="false" aria-label="User Menu">
+            <ul if="model.user.username" class="dropdown-menu" role="menu" aria-expanded="{model.openDropdown === 'profile'}" aria-label="User Menu">
                 <li role="presentation">
                     <a href="{model.accountLink}" role="menuitem" tabindex="-1">
                         Account Profile
