Change NACSCORP to indiCo

--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -21,7 +21,7 @@
                 <p if="model.bookstore.link">
                     <a href="{model.bookstore.link}" class="btn"
                         tabindex="{model.submenu === 'print' ? 0 : -1}">Bookstore Orders</a>
-                    Order through NACSCORP
+                    Order through indiCo
                 </p>
                 <p if="model.isHighSchool">
                     <a href="/bulk-order?{model.slug}" class="btn"
