--- a/src/app/pages/home/banners/banner.html
+++ b/src/app/pages/home/banners/banner.html
@@ -15,10 +15,12 @@
                 <span class="quote">{model.quote}</span>
             </div>
             <div class="{`subject-links fly${model.fly}`}">
-                <a class="btn btn-large {model.buttonSpec1} explore-subject" href="{model.subjectURL}">
+                <a class="btn btn-large {model.buttonSpec1} explore-subject"
+                 href="{model.subjectURL}" tabindex="{model.fly === 'in' ? 0 : -1}">
                     Explore {model.subjectTitle}
                 </a>
-                <a class="btn btn-large {model.buttonSpec2} explore-all" href="/subjects">
+                <a class="btn btn-large {model.buttonSpec2} explore-all"
+                 href="/subjects" tabindex="{model.fly === 'in' ? 0 : -1}">
                     Explore All Subjects
                 </a>
             </div>
