--- a/src/app/pages/bulk-order/order-items.html
+++ b/src/app/pages/bulk-order/order-items.html
@@ -7,7 +7,10 @@
         </tr>
         <tr each="orderItem in model.orderItems">
             <td data-html="orderItems[{$item}].item" skip="true"></td>
-            <td><input type="number" data-row="{$item}" name="quantity" min="{orderItem.min || '0'}" required value="{orderItem.quantity || orderItem.min}" /></td>
+            <td>
+                <span class="invalid-message">{orderItem.validationMessage('quantity')}</span>
+                <input type="number" data-row="{$item}" name="quantity" min="{orderItem.min || '0'}"
+                 required value="{orderItem.quantity || orderItem.min}"></td>
             <td>${orderItem.list}</td>
         </tr>
     </table>
