tab-navigate login menu and "go back" button on interest form

--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -40,7 +40,7 @@
             <if condition="!model.user.username">
                 <a href="{model.login}" class="pardotTrackClick" data-set-redirect="true" data-local="true" role="menuitem">Login</a>
             <else>
-                <a href="{model.accountLink}" role="menuitem">
+                <a href="{model.accountLink}" role="menuitem" aria-haspopup="true" aria-expanded="{model.openDropdown === 'login'}">
                     Hi {model.user.first_name || model.user.username}
                     <svg width="0" class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg>
                 </a>
