--- a/src/app/components/student-form/student-form.html
+++ b/src/app/components/student-form/student-form.html
@@ -1,6 +1,6 @@
 <div class="text-content">
     Students don't need to fill out any forms to use our books. Access them free now!
     <div class="cta">
-        <a onclick="history.back()" class="btn">Go back</a>
+        <button class="btn" tabindex="0">Go back</button>
     </div>
 </div>
