--- a/src/app/pages/errata/errata.scss
+++ b/src/app/pages/errata/errata.scss
@@ -104,7 +104,8 @@ $bar-size: 0.2rem;
                 display: none;
             }
 
-            &:hover .will-sort {
+            &:hover .will-sort,
+            &:focus .will-sort {
                 color: $label-2;
                 display: inline-block;
             }
