Completed layout and non-CMS functionality

--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -106,7 +106,7 @@
                 </div>
             </if>
             <if condition="model.book_allies.length">
-                <div class="row">
+                <div id="partner-resources" class="row">
                     <h3>Partner Resources</h3>
                     <p>
                     OpenStax Partners provide additional, low-cost resources for your
