--- a/src/app/pages/technology/technology.html
+++ b/src/app/pages/technology/technology.html
@@ -1,17 +1,19 @@
 <template args="model">
     <section id="banner">
-        <div class="box first"></div>
-        <div class="box second"></div>
         <div class="boxed">
             <div class="main-box">
-                <h1>{model.banner.headline}</h1>
-                <div class="description" data-html="banner.description" skip="true"></div>
-                <a class="btn outlined white-on-orange" href={model.banner.button.url}>
-                    {model.banner.button.text}
-                </a>
+                <div class="box first"></div>
+                <div class="box second"></div>
+                <div class="orange-part">
+                    <h1>{model.banner.headline}</h1>
+                    <div class="description" data-html="banner.description" skip="true"></div>
+                    <a class="btn outlined white-on-orange" href={model.banner.button.url}>
+                        {model.banner.button.text}
+                    </a>
+                </div>
             </div>
         </div>
-        <img class="student" src="{model.banner.student}">
+        <div class="student-overlay"></div>
     </section>
     <section id="steps">
         <div class="text-content">
@@ -19,9 +21,16 @@
         </div>
         <div class="boxed-row">
             <div each="step in model.steps.items" class="step">
-                <img src="{step.imageUrl}">
-                <h3>{1 + $item}. {step.headline}</h3>
-                <div data-html="steps.items[{$item}].description"></div>
+                <h3>{1 + $item}.</h3>
+                <div>{step.headline}</div>
+                <book-selector if="step.selector" skip="true"></book-selector>
+                <div if="step.description" class="outlined btn {step.url ? '' : 'dimmed'}">
+                    <if condition="step.url">
+                        <a href="{`${step.url}${step.hash}`}">{step.description}</a>
+                    <else>
+                        {step.description}
+                    </if>
+                </div>
             </div>
         </div>
     </section>
