--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -1,4 +1,5 @@
 <template args="model">
+    <div if="model.trainingWheelActive" class="training-wheel-overlay"></div>
     <span class="logo-wrapper">
         <span class="logo os-logo">
             <a href="/" aria-label="Home Page">
@@ -51,6 +52,16 @@
                     <a href="{model.accountLink}" role="menuitem" tabindex="-1">
                         Account Profile
                     </a>
+                </li>
+                <li class="tutor-menu-item" role="presentation" if="model.user.groups.includes('Tutor')">
+                    <a href="https://tutor.openstax.org/" role="menuitem" tabindex="-1">OpenStax Tutor</a>
+                    <div if="model.trainingWheelActive" class="training-wheel">
+                        <div class="put-away">×</div>
+                        <img src="/images/openstax-tutor/tutor-logo.svg">
+                        <hr>
+                        <div class="message">You can access your OpenStax Tutor courses here!</div>
+                        <div class="button-row"><button>Got It</button></div>
+                    </div>
                 </li>
                 <li if="model.user && !model.user.groups.includes('Faculty')
                     && !model.user.groups.includes('Student')
